# planetarypy

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Code-Of-Conduct.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  install_dev_deps.py  planetarypy.code-workspace  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: run_makefile.yml  test.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/planetarypy/: __init__.py  cli.py  config.py  datetime.py  exceptions.py  utils.py
src/planetarypy/data/: planetarypy_config.toml
src/planetarypy/spice/: kernels.py  spicer.py
tests/: Makefile  __init__.py  test_config.ipynb  test_config.py  test_datetime.py  test_planetarypy.py  test_spice_kernels.py  test_utils.py
