[project]
authors = [{name = "K.-Michael Aye", email = "69774+michaelaye@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "planetarypy"
requires-python = ">= 3.11"
version = "0.2.0"
license = "BSD-3-Clause"
license-file = "LICENSE"
repository = "https://github.com/planetarypy/planetarypy"
readme = "README.rst"
readme-file = "README.rst"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
planetarypy = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
test = "make test"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.3,<9"
pytest-cov = ">=5.0.0,<6"

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
tqdm = ">=4.66.5,<5"
pandas = ">=2.2.3,<3"
astropy = ">=6.1.4,<7"
spiceypy = ">=6.0.0,<7"
dask = ">=2023.3.0,<2024"
jupyter = ">=1.1.1,<2"
yarl = ">=1.16.0,<2"
matplotlib = ">=3.9.2,<4"
tomlkit = ">=0.13.2,<0.14"

[tool.pixi.environments]
test = ["test"]

