[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planetarypy"
version = "0.2.0"
description = "Core package for planetary data tools."
readme = "README.rst"
requires-python = ">= 3.9, <4"
license = {text = "BSD license"}
license-file = "LICENSE"
authors = [
    {name = "Planetarypy Developers", email = "69774+michaelaye@users.noreply.github.com"}
]
keywords = ["planetarypy", "planetary", "space", "science"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tomlkit",
    "requests",
    "tqdm",
    "pandas",
]
repository = "https://github.com/planetarypy/planetarypy"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
    "pip-tools"
]

[project.scripts]
planetarypy = "planetarypy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/planetarypy"]